--- a/src/main/resources/tezfx/view/components/ActivityCard.fxml
+++ b/src/main/resources/tezfx/view/components/ActivityCard.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<VBox spacing="8.0" styleClass="activity-card" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tezfx.controller.ActivityCardController">
+<VBox spacing="8.0" styleClass="activity-card" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ActivityCardController">
     <padding>
         <Insets bottom="11.0" left="12.0" right="12.0" top="11.0" />
     </padding>
