--- a/src/main/resources/tezfx/view/hello-view.fxml
+++ b/src/main/resources/tezfx/view/hello-view.fxml
@@ -11,7 +11,7 @@
 <BorderPane prefHeight="-1.0" prefWidth="-1.0"
             xmlns="http://javafx.com/javafx/17.0.12"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="tezfx.controller.MainController">
+            fx:controller="controllers.MainController">
 
    <left>
       <fx:include source="components/side-bar.fxml"/>
